--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
       <head>
             <title>Matt Roberts, Amatuer Learner</title>
+            <!-- link to main stylesheet -->
+            <link rel="stylesheet" type="text/css" href="/css/main.css">
       </head>
       <body>
             <nav>
