--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div class="container">
             <div class="blurb">
                   <h1>Hi there, I'm Matt Roberts</h1>
-                          <p>I'm best known as an amatuer coder with a love for the outdoors and a passion to learn
-                          about DevOps. <a href="/about">Read morea bout my life...</a></p>
+                          <p>Spicy jalapeno bacon ipsum dolor amet tri-tip pork loin velit ullamco voluptate ex nulla 
+                          <a href="/about">Read more about my life...</a></p>
             </div><!-- /.blurb -->
             </div><!-- /.container -->
             <footer>
