--- a/index.html
+++ b/index.html
@@ -1,32 +1,16 @@
-<!DOCTYPE html>
-<html>
-      <head>
-            <title>Matt Roberts, Amatuer Learner</title>
-            <!-- link to main stylesheet -->
-            <link rel="stylesheet" type="text/css" href="/css/main.css">
-      </head>
-      <body>
-            <nav>
-            <ul>
-                  <li><a href="/">Home</a></li>
-                  <li><a href="/about">About</a></li>
-                  <li><a href="/cv">CV</a></li>
-                  <li><a href="/blog">Blog</a></li>
-            </ul>
-            </nav>
-            <div class="container">
-            <div class="blurb">
+---
+layout: default
+title: Matt Roberts, Amatuer Learner
+<!--Plain text at the top of the file that Jekyll calls Front-matter. Any file that contains this will be processed
+by Jekyll. Everytime a file is commited that specifies layout: default at the top, Jekyll will magically generate
+the full HTML document by replacing {{ content}} in _layouts/default.html with the contents of the committed file -->
+---
+<div class="blurb">
                   <h1>Hi there, I'm Matt Roberts</h1>
                           <p>Spicy jalapeno bacon ipsum dolor amet tri-tip pork loin velit ullamco voluptate ex nulla 
                           <a href="/about">Read more about my life...</a></p>
-            </div><!-- /.blurb -->
-            </div><!-- /.container -->
-            <footer>
-            <ul>
-                  <li><a href="mailto:robertsak@gmail.com">email</a></li>
-                  <li><a href="https://github.com/northern11">github.com/northern11</a></li>
-            </ul>
-            </footer>
-      </body>
-</html>
+</div><!-- /.blurb -->
+      
+
+
     
