--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@ by Jekyll. Everytime a file is commited that specifies layout: default at the to
 the full HTML document by replacing {{ content}} in _layouts/default.html with the contents of the committed file -->
 ---
 <div class="blurb">
-                  <h1>Hi there, I'm Matt Roberts</h1>
-                          <p>Spicy jalapeno bacon ipsum dolor amet tri-tip pork loin velit ullamco voluptate ex nulla 
+                  <h1>Hi there, I'm Matt!</h1>
+                          <p>I moved down to Charleston, SC with my wife to start our new life after spending 5 years in
+                          the Navy and experience all the great things Charleston has to offer.
                           <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
       
